<resources>
    <string name="app_name">Planteria</string>

    <!--    On Boarding Screen Text-->
    <string name="skip">Skip</string>
    <string name="plant_life_matters_too">Plant life matters too.</string>
    <string name="take_a_snap_description">Take a snap of plant you want to discover and understand.</string>
    <string name="magnified_view">Magnified view</string>
    <string name="next">Next</string>
    <string name="daily_care_for_plants">Daily care for your plants.</string>
    <string name="get_detailed_description">Get detailed information about the plant you see.</string>
    <string name="detailed_view">Detailed View</string>
    <string name="know_the_season">Know the season your plants love.</string>
    <string name="set_up_reminders">Set up a reminders and keep your plant healthy and strong!</string>
    <string name="clear_view">Clear View</string>

    <!--    Sign Up, Sign In Page-->
    <string name="signup">Sign up</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_pass">Enter Password</string>
    <string name="re_enter_pass">Re-enter Password</string>
    <string name="or">Or</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="web_client_id">995502664442-if4pc18vvev3h17bq4r8m4rg5mu65plb.apps.googleusercontent.com</string>-->

    <!--    Home Page-->
    <string name="hi_abby">Hi Abby</string>
    <string name="search">Search</string>
    <string name="know_you_plants">Know about Plants</string>
    <string name="learn_about_plants">Learn about Plants</string>
    <string name="popular_plants">Popular Plants</string>

    <string name="distance_from_camera">Distance from camera</string>
    <string name="distance_of_2_points">Distance of 2 points</string>
    <string name="distance_of_multiple_points">Distance of multiple points</string>
    <string name="distance_from_ground">Distance from ground</string>
    <string name="initCM">0.0</string>

    <string-array name="distance_mode">
        <item>@string/distance_from_camera</item>
        <item>@string/distance_of_2_points</item>
        <item>@string/distance_of_multiple_points</item>
        <item>@string/distance_from_ground</item>
    </string-array>
</resources>