<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/onboarding_tutorial"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_1"
            >

            <TextView
                android:id="@+id/txtSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="56dp"
                android:fontFamily="@font/reemkufi_medium"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txtMainHeading"
                android:layout_width="298dp"
                android:layout_height="108dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/plant_life_matters_too"
                android:fontFamily="@font/reemkufi_bold"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:letterSpacing="0.01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtSkip" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/take_a_snap_description"
                android:textColor="@color/white"
                android:fontFamily="@font/reemkufi_medium"
                android:textSize="18sp"
                android:letterSpacing="0.04"
                app:layout_constraintTop_toBottomOf="@id/txtMainHeading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDescription"
                >

                <ImageView
                    android:id="@+id/imgMagnified_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="116dp"
                    android:layout_marginEnd="65dp"
                    android:src="@drawable/tutorial_one_magnifed_layer_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/magnified_layer_2"
                    app:layout_constraintTop_toTopOf="@id/imgMagnified_1"
                    app:layout_constraintBottom_toBottomOf="@id/imgMagnified_1"
                    app:layout_constraintStart_toStartOf="@id/imgMagnified_1"
                    app:layout_constraintEnd_toEndOf="@id/imgMagnified_1"
                    />
                <TextView
                    android:id="@+id/tabDescription"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="119dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/magnified_view"
                    android:textColor="@color/black"
                    android:fontFamily="@font/reemkufi_bold"
                    android:paddingVertical="8dp"
                    android:paddingHorizontal="25dp"
                    android:textSize="18sp"
                    android:background="@drawable/background_white_corner_8"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

<!--            <Button-->
<!--                android:id="@+id/btnNext"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="47dp"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                android:layout_marginTop="71dp"-->
<!--                android:background="@drawable/background_green_gradient_corner_8"-->
<!--                android:text = "@string/next"-->
<!--                android:fontFamily="@font/reemkufi_bold"-->
<!--                android:textSize="18sp"-->
<!--                android:textAllCaps="false"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/imgView"-->
<!--                />-->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:src="@drawable/onboarding_indicator_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>